data/derived/sp14/progs/unify/prog4644.ml.out
Characters 127-132:
  let seen' = if List.mem(seen,h)=false then [h]@seen' in
                                  ^^^^^
Error: This expression has type bool but an expression was expected of type
         ('a * 'b) list -> bool
